@@ -5,6 +5,7 @@
 
 package org.opensearch.sql.ast.tree;
 
+import com.google.common.collect.ImmutableList;
 import java.util.List;
 import java.util.Optional;
 import lombok.EqualsAndHashCode;
@@ -59,7 +60,7 @@ public class FillNull extends UnresolvedPlan {
 
   @Override
   public List<? extends Node> getChild() {
-    return child == null ? List.of() : List.of(child);
+    return this.child == null ? ImmutableList.of() : ImmutableList.of(this.child);
   }
 
   @Override
